code cleanups around XML stuff